--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="prompt_username">Username</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_incorrect_password">Password may be incorrect</string>
     <string name="error_field_required">This field is required</string>
     <string name="title_activity_main">MainActivity</string>
 
@@ -25,4 +25,8 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+
+    <string name="api_endpoint_access_tokens">access-tokens</string>
+    <string name="api_authenticate">{"username":"%s","password":"%s"}</string>
+    <string name="access_token_valid_date">access_token_valid_date</string>
 </resources>
